# teds

./: .git-safe-commit.sh  .gitignore  .pre-commit-config.yaml  AGENTS.md  CACHE_PERFORMANCE_ANALYSIS.md  CHANGELOG.md  CI_OPTIMIZATION.md  CLAUDE.md  DEV_NOTES.md  HOOK_PROTECTION.md  Makefile  README.md  SESSION_NOTES.md  address_list.tests.yaml  benchmark_cache.py  benchmark_cache_optimized.py  benchmark_comparison.py  benchmark_results_current.json  benchmark_results_optimized.json  json_path_validation_report.md  logging.yaml  merged.tests.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  spec_schema.tests.yaml  spec_schema.yaml  teds.py  teds_compat.yaml  template_map.yaml  web-app-concept.md
.claude/: settings.local.json
.claude/agents/: README.md  teds-commit-guard.md  teds-coverage-enforcer.md  teds-json-pointer-agent.md  teds-release-agent.md  teds-schema-validator.md  teds-tdd-agent.md  teds-tutorial-checker.md
.github/workflows/: configure-ruleset.yml  demo.yml  docs.yml  package-smoke.yml  release.yml  windows-smoke.yml
demo/: public_schemas.yaml  public_specs.report.adoc  public_specs.verified.warning.yaml  public_specs.yaml  sample_schemas.components+schemas.tests.yaml  sample_schemas.tests.yaml  sample_schemas.yaml  sample_tests.report.adoc  sample_tests.report.html  sample_tests.report.md  sample_tests.tests.yaml  sample_tests.yaml  test_coverage_warnings.adoc  test_incomplete_coverage.yaml
docs/: index.html  tutorial-style.css  tutorial-with-fixed-toc.html  tutorial.adoc  tutorial.html  tutorial.md  why_this_matters.md
docs/presentation/: .gitignore  README.md  build.sh  index.adoc  index.html
docs/presentation/css/: custom.css
docs/presentation/images/: .gitkeep
examples/address_list/: address_list.$defs.tests.yaml  address_list.tests.yaml  address_list.yaml  address_list_results.yaml  address_list_specs.report.html  address_list_specs.yaml
examples/mini/: mini.yaml
hooks/: commit-msg  commit-msg-protected  install-protection.sh  pre-commit-protected
reviews/: review-2025-09-08T17-34-11Z.adoc
scripts/: package_smoke.sh
teds_core/: __init__.py  cache.py  cli.py  errors.py  generate.py  http_api.py  refs.py  report.py  resources.py  spec_schema.yaml  utils.py  validate.py  version.py  yamlio.py
teds_core/templates/: summary.html.j2  summary.md.j2
templates/: comprehensive.adoc.j2  default.adoc.j2  default.html.j2  default.md.j2  summary.html.j2  summary.md.j2
tests/: conftest.py  test_cli.py  test_demo_boundaries.py  test_demo_public.py  test_errors.py  test_generate_relative_subdir.py  test_golden.py  test_report.py  test_versioning.py  utils.py
tests/bdd/: __init__.py  conftest.py  test_cli_argument_parsing.py  test_cli_comprehensive.py  test_cli_essentials.py  test_generate.py  test_generate_integration.py  test_generate_python.py  test_http_api.py  test_json_pointer.py  test_jsonpath.py  test_report_extensions.py  test_reports.py  test_template_integer_handling.py  test_tutorial_examples.py  test_tutorial_examples_simple.py  test_tutorial_json_path_quick.py  test_tutorial_json_path_verification.py  test_verify.py  test_verify_python.py
tests/bdd/features/: cli_argument_parsing.feature  cli_comprehensive.feature  cli_essentials.feature  generate.feature  http_api.feature  json_pointer_tests.feature  jsonpath_tests.feature  report_extensions.feature  reports.feature  template_integer_handling.feature  tutorial_examples.feature  verify.feature
tests/cases/format_divergence/: expected.error.yaml  expected.in_place.yaml  expected.yaml  schema.yaml  spec.report.md  spec.yaml
tests/cases/output_filtering_and_inplace/: expected.in_place.yaml  expected.yaml  schema.yaml  spec.yaml
tests/cli/: test_cli.py  test_demo_boundaries.py  test_demo_public.py  test_errors.py  test_generate_redesign_cli.py  test_generate_relative_subdir.py  test_generate_target_placement_cli.py  test_generate_yaml_config_cli.py  test_golden.py  test_report_cli.py  test_versioning.py
tests/load/agriculture/: agriculture.tests.yaml  agriculture.yaml
tests/unit/: test_cache_unit.py  test_generate_coverage_unit.py  test_generate_jsonpath_exact_behavior_unit.py  test_generate_jsonpath_expansion_unit.py  test_generate_more_unit.py  test_generate_output_filename_unit.py  test_generate_parser_unit.py  test_generate_path_behavior_unit.py  test_generate_redesign_unit.py  test_generate_schema_path_resolution_unit.py  test_generate_unit.py  test_generate_yaml_config_unit.py  test_refs_http_unit.py  test_refs_more_unit.py  test_refs_network_unit.py  test_refs_unit.py  test_report_html_unit.py  test_report_misc_unit.py  test_report_more_unit.py  test_report_unit.py  test_resources_unit.py  test_utils.py  test_validate_coverage_unit.py  test_validate_strategy_unit.py  test_validate_unit.py  test_version_more_unit.py  test_version_unit.py
(+58 files in other folders)
